Move all cards to 1 grid, make header appear clickable

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,7 +1,4 @@
-.grid-item-span-all-cols {
-    grid-column: 1 / -1;
-}
-
-.grid-item-span-all-cols > .myst-card {
-    margin: 0;
+html.light a.myst-card > .myst-card-header {
+    /* header of a link card in light mode */
+    background-color: #eff6ff; /* Tailwind blue-50, used by info admonition */
 }
